# tb-plus

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  rust-safety.yml  test-build.yml
crates/tb-database/: Cargo.toml
crates/tb-database/src/: lib.rs  mysql.rs  sqlite.rs
crates/tb-database/src/settings/: crypto.rs  mod.rs
crates/tb-logic/: Cargo.toml
crates/tb-logic/src/: address.rs  alerts.rs  dosage.rs  lib.rs
crates/tb-models/: Cargo.toml
crates/tb-models/src/: alert.rs  dispensing.rs  dosage.rs  mapping.rs  patient.rs  settings.rs  treatment.rs
docs/: CONTRIBUTING.md  ROADMAP.md  cargo-workspace.md  security.md
public/: splashscreen.html
scripts/: gen-icons.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: alerts.rs  appointments.rs  dosage.rs  followups.rs  mapping.rs  mod.rs  patients.rs  reports.rs  screening.rs  settings.rs
src-tauri/src/db/: mysql.rs  sqlite.rs
src-tauri/src/models/: dosage.rs  mod.rs  patient.rs  reports.rs  settings.rs
src-tauri/src/settings/: crypto.rs  mod.rs
src/__tests__/factories/: alert.ts  mapping.ts  patient.ts
src/__tests__/mocks/: tauri.ts
src/components/active/: AlertBadge.vue  PatientCard.vue  ProgressBar.vue
src/components/layout/: AppHeader.vue  AppSidebar.vue
src/components/mapping/: MapCanvas.vue  MapFilters.vue
src/components/patient/: DischargeModal.vue  DispensingTable.vue  FollowupForm.vue  FollowupList.vue  SideEffectTracker.vue  TreatmentTimeline.vue
src/components/screening/: EnrollModal.vue  PatientTable.vue
src/components/shared/: ConfirmDialog.vue  DrugChip.vue  StatusBadge.vue  TbClinicLogo.vue
src/router/: index.ts
src/stores/: alerts.ts  appointments.ts  mapping.ts  patient.ts  screening.ts  settings.ts
src/stores/__tests__/: alerts.test.ts  appointments.test.ts  mapping.test.ts  patient.test.ts  screening.test.ts  settings.test.ts
src/styles/: base.css  variables.css
src/types/: alert.ts  dispensing.ts  dosage.ts  mapping.ts  patient.ts  reports.ts  treatment.ts
src/views/: AboutView.vue  ActiveView.vue  AppointmentsView.vue  DischargedView.vue  DosageAssessmentView.vue  MappingView.vue  PatientDetailView.vue  ReportsView.vue  ScreeningView.vue  SettingsView.vue
