[workspace]
members = [
    "crates/tb-models",
    "crates/tb-database",
    "crates/tb-logic",
    "src-tauri",
]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
