[package]
name = "tb-plus"
version = "0.1.5"
description = "TB Plus — ระบบบริหารจัดการคลินิกวัณโรค โรงพยาบาลสระโบสถ์"
authors = ["Suradet Pratomsak"]
license = "MIT"
repository = "https://github.com/suradet-ps/tb-plus"
default-run = "tb-plus"
edition = "2024"
rust-version = "1.94.1"

[lib]
name = "tb_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tb-plus"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
sqlx = { version = "0.8", features = ["mysql", "sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
