[package]
name = "tb-plus"
version = "1.3.0"
description = "TB Plus — ระบบบริหารจัดการคลินิกวัณโรค โรงพยาบาลสระโบสถ์"
authors = ["Suradet Pratomsak"]
license = "MIT"
repository = "https://github.com/suradet-ps/tb-plus"
default-run = "tb-plus"
edition = "2024"
rust-version = "1.94.1"

[lib]
name = "tb_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tb-plus"
path = "src/main.rs"

[dependencies]
tb-models = { path = "../crates/tb-models" }
tb-database = { path = "../crates/tb-database" }
tb-logic = { path = "../crates/tb-logic" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
sqlx = { version = "0.9", features = ["mysql", "sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
