[package]
name = "tb-database"
version = "1.3.0"
edition = "2024"
description = "TB Plus — database queries and encrypted settings manager"

[lib]
name = "tb_database"
path = "src/lib.rs"

[dependencies]
tb-models = { path = "../tb-models" }
sqlx = { version = "0.9", features = ["mysql", "sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
hkdf = "0.13"
sha2 = "0.11"
rand = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
