[package]
name = "tb-logic"
version = "1.2.0"
edition = "2024"
description = "TB Plus — pure business logic (alerts, dosage, address parsing)"

[lib]
name = "tb_logic"
path = "src/lib.rs"

[dependencies]
tb-models = { path = "../tb-models" }
tb-database = { path = "../tb-database" }
chrono = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }
tokio = { version = "1", features = ["sync"] }
sqlx = { version = "0.9", features = ["mysql", "sqlite", "chrono"] }
