[package]
name = "tb-models"
version = "1.2.0"
edition = "2024"
description = "TB Plus — shared data models"

[lib]
name = "tb_models"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9", features = ["mysql", "sqlite", "chrono"] }
